added responsive for login page

--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,8 @@
             <img class="login-logo" src="../assets/icons/logo/logoSmall.svg" alt="Join logo">
         </div>
 
+        <div class="login-container">
+
         <div class="login-header">
             <p class="login-header-text">Not a Join user?</p>
             <a href="../html/signup.html" class="signup-button">Sign up</a>
@@ -39,7 +41,7 @@
                 </div>
 
                 <div class="login-buttons">
-                    <button type="submit" class="login-button-primary">Log in</button>
+                    <button type="submit" class="login-button-primary login-button">Log in</button>
                     <button type="button" class="login-button-secondary guest-button">Guest Log in</button>
                 </div>
             </form>
@@ -51,7 +53,7 @@
         </footer>
 
     </div>
-
+</div>
 </body>
 
 </html>
