--- a/html/summary.html
+++ b/html/summary.html
@@ -19,19 +19,19 @@
             <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
         </section>
         <nav class="sidebar-nav">
-            <a href="#" class="sidebar-nav-section current-selection">
+            <a href="../html/summary.html" class="sidebar-nav-section current-selection">
                 <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                 <p>Summary</p>
             </a>
-            <a href="#" class="sidebar-nav-section">
+            <a href="../html/add_task.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                 <p>Add Task</p>
             </a>
-            <a href="#" class="sidebar-nav-section">
+            <a href="../html/board.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                 <p>Board</p>
             </a>
-            <a href="#" class="sidebar-nav-section">
+            <a href="../html/contacts.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                 <p>Contacts</p>
             </a>
@@ -39,8 +39,8 @@
     </div>
     
     <footer class="sidebar-footer">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Legal notice</a>
+        <a href="../html/privacyPolicy.html">Privacy Policy</a>
+        <a href="../html/legalNotice.html">Legal notice</a>
     </footer>
 </aside>
     <article>
