added responsive to signup page

--- a/html/signup.html
+++ b/html/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Join - Sign up</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/login.css">
     <link rel="stylesheet" href="../style/signup.css">
@@ -19,8 +19,7 @@
         </div>
 
         <div class="login-header">
-            <p class="login-header-text">Already a Join user?</p>
-            <a href="../html/login.html" class="signup-button">Log in</a>
+           
         </div>
 
         <main class="login-card">
@@ -51,15 +50,15 @@
                     <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                 </div>
 
-                <label class="privacy-check" style="align-self: flex-start; margin-top: 8px;">
+                <label class="privacy-check">
                     <input type="checkbox" id="privacy-checkbox">
-                    <span> I accept the <a href="#">Privacy policy</a></span>
+                    <span> I accept the <a href="../html/privacyPolicy.html">Privacy policy</a></span>
                 </label>
 
-                <div class="login-buttons" style="margin-top: 24px;">
+                <div class="login-buttons">
                     <button
                         type="submit"
-                        class="login-button-primary"
+                        class="login-button-primary signup-button-primary"
                         id="signup-btn"
                         disabled
                     >
