connected privacy policy and legal notice to pages

--- a/html/signup.html
+++ b/html/signup.html
@@ -69,8 +69,8 @@
         </main>
 
         <footer class="login-footer">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Legal notice</a>
+            <a href="../html/privacyPolicy.html">Privacy Policy</a>
+            <a href="../html/legalNotice.html">Legal notice</a>
         </footer>
     </div>
 
