added guest login function, added sign up function, added header-avatar

--- a/html/login.html
+++ b/html/login.html
@@ -41,9 +41,16 @@
                 </div>
 
                 <div class="login-buttons">
-                    <button type="submit" class="login-button-primary login-button">Log in</button>
-                    <button type="button" class="login-button-secondary guest-button">Guest Log in</button>
-                </div>
+                <button type="submit" class="login-button-primary" id="login-btn">
+                 Log in
+                </button>
+
+                <button type="button"
+                 class="login-button-secondary guest-button"
+                    id="guest-login-btn">
+                 Guest Log in
+                 </button>
+</div>
             </form>
         </main>
 
@@ -54,6 +61,12 @@
 
     </div>
 </div>
+
+
+<script src="../scripts/firebase.js"></script>
+<script src="../scripts/login.js" defer></script>
+</body>
+
 </body>
 
 </html>
