--- a/html/login.html
+++ b/html/login.html
@@ -28,30 +28,49 @@
         <main class="login-card">
             <h1 class="login-title">Log in</h1>
             
-            <form class="login-form">
-    
-                <div class="input-wrapper">
-                    <input type="email" class="login-input" placeholder="Email" required>
-                    <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
-                </div>
+            <form class="login-form" id="login-form">
 
-                <div class="input-wrapper">
-                    <input type="password" class="login-input" placeholder="Password" required>
-                    <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
-                </div>
+    <div class="input-wrapper">
+        <input
+            type="email"
+            id="login-email"
+            class="login-input"
+            placeholder="Email"
+            required
+        >
+        <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
+    </div>
 
-                <div class="login-buttons">
-                <button type="submit" class="login-button-primary" id="login-btn">
-                 Log in
-                </button>
+    <div class="input-wrapper">
+        <input
+            type="password"
+            id="login-password"
+            class="login-input"
+            placeholder="Password"
+            required
+        >
+        <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
+    </div>
 
-                <button type="button"
-                 class="login-button-secondary guest-button"
-                    id="guest-login-btn">
-                 Guest Log in
-                 </button>
-</div>
-            </form>
+    <div class="login-buttons">
+        <button
+            type="submit"
+            class="login-button-primary"
+            id="login-btn"
+        >
+            Log in
+        </button>
+
+        <button
+            type="button"
+            class="login-button-secondary guest-button"
+            id="guest-login-btn"
+        >
+            Guest Log in
+        </button>
+    </div>
+</form>
+
         </main>
 
         <footer class="login-footer">
