added signup massage

--- a/html/signup.html
+++ b/html/signup.html
@@ -12,6 +12,10 @@
 </head>
 <body class="body">
 
+    <div id="signup-toast" class="signup-toast hidden">
+    You Signed Up successfully
+</div>
+
     <div class="login-wrapper">
 
         <div class="login-logo-section">
