linked repsonsive css

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
     <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/add_task_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
