update elements in templates regarding add_task html

--- a/html/board.html
+++ b/html/board.html
@@ -110,6 +110,7 @@
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
     <script src="../scripts/board_overlay.js"></script>
+    <script src="../scripts/add_task.js"></script>
 </body>
 
 
