--- a/html/contacts.html
+++ b/html/contacts.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style/board_style.css">
     <link rel="stylesheet" href="../style/add_contact.css">
     <link rel="stylesheet" href="/style/add_task.css">
+    <link rel="stylesheet" href="../style/board_overlay_style.css">
 </head>
 
 <body class="body">
@@ -61,7 +62,7 @@
         </header>
         <main class="contact-main">
             <aside class="sidebar-contacts">
-                <div onclick="openDialog()">
+                <div onclick="openAddContact()">
                     <button class="button_add_task add-contact-btn">
                         <p>Add new contact</p>
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
@@ -70,53 +71,53 @@
                 <div class="contact-list">
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">A</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section id="test" onclick="displayInMain()" class="list-user">
                         </section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">B</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">C</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">D</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">E</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">F</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">G</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">H</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">I</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">J</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
@@ -126,84 +127,84 @@
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">L</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">M</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">N</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">O</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">P</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Q</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">R</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">S</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">T</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">U</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">V</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">W</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">X</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Y</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Z</h2>
-                        <div class="seperator"></div>
+                        <div class="seperator-list"></div>
                         <section></section>
                     </article>
                 </div>
             </aside>
             <section class="contact-display">
                 <div class="contact-header">
-                    <h1>Contacts</h1>
+                    <h1 onclick="openEditContact()">Contacts</h1>
                     <div class="seperator-vertical"></div>
                     <span class="contact-sub">Better with a team</span>
                 </div>
@@ -211,19 +212,22 @@
                 </article>
             </section>
             <dialog id="addContact" class="dialog-window">
-                <div class="dialog-content">
+                <div id="addContent" class="dialog-content">
                     <section class="main-left">
-                        <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-                        <h1 class="white">Add Contact</h1>
-                        <p class="contact-sub white">Tasks are better with a team!</p>
+                        <img class="logo-dialog" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+                        <h1 class="white margin">Add Contact</h1>
+                        <p class="contact-sub white margin">Tasks are better with a team!</p>
                         <div class="seperator-horizontal"></div>
                     </section>
                     <section class="main-right">
-                        <div class="two-letter-name">
-                            <img src="../assets/icons/contacts/person.svg" alt="placeholder for name">
+                        <div class="two-letter-name position">
+                            <img src="../assets/icons/contacts/person_white.svg" alt="placeholder for name">
                         </div>
-                        <div>
-                            <button onclick="dialogClose()"><img src="../assets/icons/contacts/close.svg" alt="close window"></button>
+                        <div class="add-contact-info">
+                            <button class="close-btn" onclick="closeAddContact()">
+                                <img class="icon-close" src="../assets/icons/contacts/close.svg"
+                                    alt="close overlay icon">
+                            </button>
                             <label class="subtask-section name">
                                 <input type="text" placeholder="Name">
                             </label>
@@ -231,21 +235,56 @@
                                 <input type="email" placeholder="Email">
                             </label>
                             <label class="subtask-section phone">
-                                <input type="number" placeholder="Phone">
+                                <input type="tel" placeholder="Phone">
                             </label>
-                            <section class="button-section">
-                                <div class="clear-button">
-                                    <button class="action-buttons" onclick="clearAllInputs()">
-                                        <p>Cancel</p>
-                                        <img src="../assets/icons/contacts/close.svg" alt="clear icon">
-                                    </button>
-                                </div>
-                                <div class="create-task">
-                                    <button class="action-buttons create-button" onclick="createTask()">
-                                        <p>Create contact</p>
-                                        <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
-                                    </button>
-                                </div>
+                            <section class="button-section-contact">
+                                <button class="action-buttons">
+                                    <p>Cancel</p>
+                                    <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
+                                </button>
+                                <button class="action-buttons create-button">
+                                    <p>Create contact</p>
+                                    <img src="../assets/icons/contacts/check.svg" alt="create contact icon">
+                                </button>
+                            </section>
+                        </div>
+                    </section>
+                </div>
+            </dialog>
+            <dialog id="editContact" class="dialog-window">
+                <div id="editContent" class="dialog-content">
+                    <section class="main-left">
+                        <img class="logo-dialog" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+                        <h1 class="white margin">Edit Contact</h1>
+                        <div class="seperator-horizontal"></div>
+                    </section>
+                    <section class="main-right">
+                        <div class="two-letter-name position">
+                            <img src="../assets/icons/contacts/person_white.svg" alt="placeholder for name">
+                        </div>
+                        <div class="add-contact-info">
+                            <button class="close-btn" onclick="closeEditContact()()">
+                                <img class="icon-close" src="../assets/icons/contacts/close.svg"
+                                    alt="close overlay icon">
+                            </button>
+                            <label class="subtask-section name">
+                                <input type="text" placeholder="Name">
+                            </label>
+                            <label class="subtask-section mail">
+                                <input type="email" placeholder="Email">
+                            </label>
+                            <label class="subtask-section phone">
+                                <input type="tel" placeholder="Phone">
+                            </label>
+                            <section class="button-section-contact">
+                                <button class="action-buttons">
+                                    <p>Delete</p>
+                                    <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
+                                </button>
+                                <button class="action-buttons create-button">
+                                    <p>Save</p>
+                                    <img src="../assets/icons/contacts/check.svg" alt="create contact icon">
+                                </button>
                             </section>
                         </div>
                     </section>
