--- a/html/contacts.html
+++ b/html/contacts.html
@@ -45,8 +45,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="/html/privacyPolicy.html">Privacy Policy</a>
-            <a href="/html/legalNotice.html">Legal notice</a>
+            <a href="./privacyPolicy.html">Privacy Policy</a>
+            <a href="./legalNotice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
