--- a/html/contacts.html
+++ b/html/contacts.html
@@ -42,8 +42,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Legal notice</a>
+            <a href="/html/privacyPolicy.html">Privacy Policy</a>
+            <a href="/html/legalNotice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
@@ -62,150 +62,150 @@
         </header>
         <main class="contact-main">
             <aside class="sidebar-contacts">
-                <div onclick="openAddContact()">
-                    <button class="button_add_task add-contact-btn">
+                
+                    <button onclick="openDialog('addContact' , 'addContent')" class="button_add_task add-contact-btn">
                         <p>Add new contact</p>
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
-                </div>
+                
                 <div class="contact-list">
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">A</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section id="test" onclick="displayInMain()" class="list-user">
                         </section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">B</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">C</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">D</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">E</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">F</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">G</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">H</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">I</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">J</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">K</h2>
-                        <div class="seperator"></div>
+                        <div class="separator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">L</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">M</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">N</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">O</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">P</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Q</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">R</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">S</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">T</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">U</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">V</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">W</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">X</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Y</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
                         <h2 class="single-letter font-size-20">Z</h2>
-                        <div class="seperator-list"></div>
+                        <div class="separator-list"></div>
                         <section></section>
                     </article>
                 </div>
             </aside>
             <section class="contact-display">
                 <div class="contact-header">
-                    <h1 onclick="openEditContact()">Contacts</h1>
-                    <div class="seperator-vertical"></div>
+                    <h1>Contacts</h1>
+                    <div class="separator-vertical"></div>
                     <span class="contact-sub">Better with a team</span>
                 </div>
                 <article id="mainView" class="contact-main-view">
@@ -217,14 +217,14 @@
                         <img class="logo-dialog" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
                         <h1 class="white margin">Add Contact</h1>
                         <p class="contact-sub white margin">Tasks are better with a team!</p>
-                        <div class="seperator-horizontal"></div>
+                        <div class="separator-horizontal"></div>
                     </section>
                     <section class="main-right">
                         <div class="two-letter-name position">
                             <img src="../assets/icons/contacts/person_white.svg" alt="placeholder for name">
                         </div>
                         <div class="add-contact-info">
-                            <button class="close-btn" onclick="closeAddContact()">
+                            <button class="close-btn" onclick="closeDialog('addContact' , 'addContent')">
                                 <img class="icon-close" src="../assets/icons/contacts/close.svg"
                                     alt="close overlay icon">
                             </button>
@@ -238,7 +238,7 @@
                                 <input type="tel" placeholder="Phone">
                             </label>
                             <section class="button-section-contact">
-                                <button class="action-buttons">
+                                <button onclick="closeDialog('addContact' , 'addContent')" class="action-buttons">
                                     <p>Cancel</p>
                                     <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
                                 </button>
@@ -256,14 +256,14 @@
                     <section class="main-left">
                         <img class="logo-dialog" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
                         <h1 class="white margin">Edit Contact</h1>
-                        <div class="seperator-horizontal"></div>
+                        <div class="separator-horizontal"></div>
                     </section>
                     <section class="main-right">
                         <div class="two-letter-name position">
                             <img src="../assets/icons/contacts/person_white.svg" alt="placeholder for name">
                         </div>
                         <div class="add-contact-info">
-                            <button class="close-btn" onclick="closeEditContact()()">
+                            <button class="close-btn" onclick="closeDialog('editContact' , 'editContent')">
                                 <img class="icon-close" src="../assets/icons/contacts/close.svg"
                                     alt="close overlay icon">
                             </button>
@@ -277,7 +277,7 @@
                                 <input type="tel" placeholder="Phone">
                             </label>
                             <section class="button-section-contact">
-                                <button class="action-buttons">
+                                <button onclick="closeDialog('editContact' , 'editContent')" class="action-buttons">
                                     <p>Delete</p>
                                     <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
                                 </button>
