--- a/html/board.html
+++ b/html/board.html
@@ -110,8 +110,7 @@
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
     <script src="../scripts/board_overlay.js"></script>
-    <script src="../scripts/test_script.js"></script>
-    <!-- <script src="../scripts/add_task.js"></script> -->
+    <script src="../scripts/add_task.js"></script>
 </body>
 
 
