--- a/html/board.html
+++ b/html/board.html
@@ -111,6 +111,7 @@
     <script src="../scripts/board.js"></script>
     <script src="../scripts/board_overlay.js"></script>
     <script src="../scripts/add_task.js"></script>
+    <script src="../scripts/add_task_templates.js"></script>
 </body>
 
 
