feat: validation for storing user information in database when adding a new user (phone & mail)

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -122,7 +122,7 @@
                                     </button>
                                 </div>
                                 <div class="create-task">
-                                    <button onclick="addContactToDatabase()" class="action-buttons create-button">
+                                    <button onclick="addContactToBase()" class="action-buttons create-button">
                                         <p>Create contact</p>
                                         <img src="../assets/icons/contacts/check.svg" alt="create contact icon">
                                     </button>
