feat -implemented response as dialog in html contacts - added css for message - implemented call of the message in flow

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -171,6 +171,9 @@
                     </section>
                 </div>
             </dialog>
+            <dialog id="responseDialog" class="dialog-message">
+                <div class="white font-size-20" id="responseMessage">Contact succesfully created</div>
+            </dialog>
         </main>
     </article>
     <script src="/scripts/contacts.js"></script>
