--- a/html/board.html
+++ b/html/board.html
@@ -112,6 +112,7 @@
     <script src="../scripts/board_overlay.js"></script>
     <script src="../scripts/add_task.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
+    <script src="../scripts/firebase.js"></script>
 </body>
 
 
