--- a/html/add_task.html
+++ b/html/add_task.html
@@ -46,6 +46,7 @@
     <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
+                <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a href="#">
