created mainframe responsive css

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/mainframe.css">
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/add_task_responsive.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
