--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
-<body class="body" onload="add_task_init()">
+<body class="body" onload="addTaskInit()">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
