fix: added class "h1" to h1 element

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -81,7 +81,7 @@
             </aside>
             <section class="contact-display">
                 <div class="contact-header">
-                    <h1>Contacts</h1>
+                    <h1 class="h1">Contacts</h1>
                     <div class="separator-vertical"></div>
                     <span class="contact-sub">Better with a team</span>
                 </div>
