feat: implemented edit function in html button
refactor: - moved editing "PUT" function into firebase.js

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -166,7 +166,7 @@
                                     <p>Delete</p>
                                     <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
                                 </button>
-                                <button class="action-buttons create-button">
+                                <button onclick="editContactInDatabase()" class="action-buttons create-button">
                                     <p>Save</p>
                                     <img src="../assets/icons/contacts/check.svg" alt="create contact icon">
                                 </button>
