fixed required text

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -172,7 +172,13 @@
                         </form>
                     </section>
                 </main>
+                <section class="show-req-text-767">
+                    <p class="required-text"><span class="required">*</span>This field is required</p>
+                </section>
                 <aside class="action-button-section hide-767">
+                    <section class="hide-req-text-767">
+                        <p class="required-text"><span class="required">*</span>This field is required</p>
+                    </section>
                     <section class="button-section">
                         <div class="clear-button">
                             <button class="action-buttons" onclick="clearAllInputs()">
