addTaskInit() wird nun über event Listener DOMContentLoaded aufgerfufen. Das beschleunigt das Laden und ist best practise.

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
-<body class="body" onload="addTaskInit()">
+<body class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
