--- a/html/contacts.html
+++ b/html/contacts.html
@@ -165,7 +165,7 @@
                             </label>
                             <p id="required_edit_phone" class="required-info margin-add-dialog">Please enter a valid phone number.</p>
                             <section class="button-section-contact">
-                                <button onclick="closeDialog('editContact' , 'editContent')" class="action-buttons">
+                                <button onclick="deleteThisContactFromDialog()" class="action-buttons">
                                     <p>Delete</p>
                                     <img src="../assets/icons/contacts/close.svg" alt="cancel contact icon">
                                 </button>
