fix: correctly displaying currently edited contact avatar in edit dialog

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -144,8 +144,8 @@
                         <div class="separator-horizontal"></div>
                     </section>
                     <section class="main-right">
-                        <div class="two-letter-name position">
-                            <img src="../assets/icons/contacts/person_white.svg" alt="placeholder for name">
+                        <div id="editedAvatar" class="two-letter-name position">
+                            
                         </div>
                         <div class="add-contact-info">
                             <button class="close-btn" onclick="closeDialog('editContact' , 'editContent')">
